--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,43 @@
-node_modules
-.env
-dist
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Logs
+logs/
+*.log
+*.log.*
+
+# Build
+dist/
+build/
+.vite/
+
+# System files
 .DS_Store
+Thumbs.db
+
+# Env
+.env
+.env.*.local
+
+# IDE
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Mac files
+.AppleDouble
+.LSOverride
+
+# Supabase
+supabase/migrations/
+.supabase/
+
+# Coverage
+coverage/
