--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "lucide-react": "^0.509.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
