--- a/.github/workflows/deploy-supabase.yml
+++ b/.github/workflows/deploy-supabase.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Download Supabase CLI binary
         run: |
-          rm -f supabase supabase.tar.gz
+          rm -rf supabase supabase.tar.gz
           curl -L https://github.com/supabase/cli/releases/latest/download/supabase_linux_amd64.tar.gz -o supabase.tar.gz
           tar -xzf supabase.tar.gz
           chmod +x supabase
