--- a/.github/workflows/deploy-supabase.yml
+++ b/.github/workflows/deploy-supabase.yml
@@ -29,3 +29,4 @@ jobs:
         run: |
           supabase link --project-ref ajxymcztnprndgiupimi
           supabase functions deploy validate-captcha
+# Trigger redeploy
