--- a/.github/workflows/deploy-supabase.yml
+++ b/.github/workflows/deploy-supabase.yml
@@ -12,21 +12,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          path: repo
 
       - name: Download Supabase CLI binary
         run: |
-          rm -rf supabase supabase.tar.gz
           curl -L https://github.com/supabase/cli/releases/latest/download/supabase_linux_amd64.tar.gz -o supabase.tar.gz
           tar -xzf supabase.tar.gz
           chmod +x supabase
           sudo mv supabase /usr/local/bin
 
       - name: Deploy validate-captcha function
-        working-directory: ./ # 👈 заставляем работать из корня репозитория
+        working-directory: ./repo
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
           RECAPTCHA_SECRET_KEY: ${{ secrets.RECAPTCHA_SECRET_KEY }}
         run: |
           supabase link --project-ref ajxymcztnprndgiupimi
           supabase functions deploy validate-captcha
-# Trigger redeploy
