--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Node
+# Node modules
 node_modules/
 npm-debug.log*
 yarn-debug.log*
@@ -10,22 +10,25 @@ logs/
 *.log
 *.log.*
 
-# Build
+# Build outputs
 dist/
 build/
 .vite/
+supabase/.output
 
-# System files
+# System
 .DS_Store
 Thumbs.db
+.AppleDouble
+.LSOverride
 
-# Env
+# Env files
 .env
 .env.*.local
 .env.keys
 .env.local
 
-# IDE
+# IDEs and editors
 .vscode/
 .idea/
 *.suo
@@ -33,19 +36,16 @@ Thumbs.db
 *.njsproj
 *.sln
 
-# Mac files
-.AppleDouble
-.LSOverride
-
-# Coverage
+# Coverage reports
 coverage/
 
-# Supabase local settings
+# Supabase local/dev
+supabase/.output
 .supabase/access-token
 .supabase/config.json
-
-# Supabase secrets (если вдруг есть)
 .supabase/functions/**/secrets.json
 
-# Local build artifacts
-supabase/.output
+# OS & Misc
+*.swp
+*.bak
+*.tmp
