--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -317,3 +317,8 @@ entrypoint = "./functions/validate-captcha/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/validate-captcha/*.html" ]
+[functions.rate-limit-login]
+enabled = true
+verify_jwt = false
+import_map = "./functions/rate-limit-login/deno.json"
+entrypoint = "./functions/rate-limit-login/index.ts"
